Commit and failure strategy ignored for transactional kafka consumer